--- a/app/src/main/res/layout/layout_sign_in.xml
+++ b/app/src/main/res/layout/layout_sign_in.xml
@@ -19,24 +19,23 @@
 
         <Button
             android:id="@+id/btn_phone_sign_in"
-            android:padding="16dp"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/baseline_phone_24"
-            android:text="Sign In with Phone"
-            android:textColor="@android:color/black"
-        />
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_border"
+            android:drawableLeft="@drawable/baseline_phone_24"
+            android:padding="16dp"
+            android:text="Logar com o celular"
+            android:textColor="@android:color/black" />
 
         <Button
             android:id="@+id/btn_google_sign_in"
             android:padding="16dp"
-            android:background="@android:color/white"
+            android:background="@drawable/button_border"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
-            android:text="Sign In with Google"
+            android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
+            android:text="Logar com o Google"
             android:textColor="@android:color/black"
         />
 
