--- a/app/src/main/res/layout/activity_client_home.xml
+++ b/app/src/main/res/layout/activity_client_home.xml
@@ -1,25 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:layout_height="match_parent">
 
-    <include
-        android:id="@+id/app_bar_client_home"
-        layout="@layout/app_bar_client_home"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_client_home"
-        app:menu="@menu/activity_main_drawer" />
-</androidx.drawerlayout.widget.DrawerLayout>
+        android:background="@drawable/mapa"
+    >
+        <Button
+            android:id="@+id/button_text"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="@drawable/button_border_map"
+            android:layout_marginTop="80dp"
+            android:layout_marginHorizontal="20dp"
+            android:text="Av. Paulista, 1230"
+            android:drawableLeft="@drawable/search"
+            android:textColor="@android:color/darker_gray"
+            android:textAlignment="viewStart"
+
+            android:padding="16dp">
+        </Button>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="80dp"
+            android:layout_marginTop="350dp"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Lista"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="0dp"
+                android:padding="16dp"
+                android:drawableLeft="@drawable/text_align_center"
+                android:background="@drawable/button_border_list"
+                />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Filtro"
+                android:layout_marginLeft="0dp"
+                android:padding="16dp"
+                android:drawableLeft="@drawable/filter"
+                android:textColor="@android:color/white"
+                android:background="@drawable/button_border_filter"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
+</RelativeLayout>
