--- a/app/src/main/res/layout/activity_client_home.xml
+++ b/app/src/main/res/layout/activity_client_home.xml
@@ -34,28 +34,42 @@
             android:layout_alignParentBottom="true">
 
             <Button
-                android:layout_width="0dp"
+                android:layout_width="13dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Lista"
-                android:textColor="@android:color/white"
                 android:layout_marginRight="0dp"
-                android:padding="16dp"
-                android:drawableLeft="@drawable/text_align_center"
+                android:layout_weight="1"
                 android:background="@drawable/button_border_list"
-                />
+                android:drawableLeft="@drawable/text_align_center"
+                android:padding="16dp"
+                android:text="Lista"
+                android:textColor="@android:color/white" />
 
             <Button
-                android:layout_width="0dp"
+                android:layout_width="13dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Filtro"
                 android:layout_marginLeft="0dp"
-                android:padding="16dp"
-                android:drawableLeft="@drawable/filter"
-                android:textColor="@android:color/white"
+                android:layout_weight="1"
                 android:background="@drawable/button_border_filter"
-                />
+                android:drawableLeft="@drawable/filter"
+                android:padding="16dp"
+                android:text="Filtro"
+                android:textColor="@android:color/white" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/container_information"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below="@id/button_text"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="This is some information"
+                android:padding="16dp"/>
 
         </LinearLayout>
 
