--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -4,29 +4,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/splash_screen"
+    android:gravity="center">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:hintEnabled="true"
+        android:layout_marginBottom="16dp"
+        android:boxStrokeColor="@android:color/black"> <!-- Added black border -->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_email"
             android:hint="Email"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:padding="16dp"
+            android:textColor="@android:color/black" /> <!-- Text color set to black -->
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:hintEnabled="true"
+        android:layout_marginBottom="16dp"
+        android:boxStrokeColor="@android:color/black"> <!-- Added black border -->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
             android:inputType="textPassword"
-            android:padding="8dp" />
+            android:padding="16dp"
+            android:textColor="@android:color/black" /> <!-- Text color set to black -->
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -34,5 +45,9 @@
         android:text="Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#FF5F00"
+        android:textColor="@android:color/white"
+        android:padding="16dp"
+        android:cornerRadius="8dp" />
 </LinearLayout>
