--- a/app/src/main/res/layout/activity_map_car.xml
+++ b/app/src/main/res/layout/activity_map_car.xml
@@ -8,6 +8,8 @@
     tools:context=".MapCarActivity">
 
     <!-- Background Image -->
+
+    <!-- Search input at the top -->
     <ImageView
         android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
@@ -16,9 +18,8 @@
         android:src="@drawable/mapa"
         android:visibility="visible"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="-109dp" />
 
-    <!-- Search input at the top -->
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/searchInput"
         android:layout_width="match_parent"
@@ -248,7 +249,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Filter options here" />
+            android:text="Filter options here"
+            tools:ignore="MissingConstraints" />
 
         <Button
             android:id="@+id/closeFilterDialog"
@@ -257,7 +259,8 @@
             android:backgroundTint="#FF5F00"
             android:text="Close"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/searchInput" />
+            app:layout_constraintTop_toBottomOf="@id/searchInput"
+            tools:ignore="MissingConstraints,NotSibling" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
