--- a/app/src/main/res/layout/activity_map_car.xml
+++ b/app/src/main/res/layout/activity_map_car.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mapCarLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MapCarActivity">
+    android:layout_height="match_parent">
 
     <!-- Background Image -->
-
-    <!-- Search input at the top -->
     <ImageView
         android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/mapa"
-        android:visibility="visible"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-109dp" />
+        android:visibility="visible" />
 
+    <!-- Search input at the top -->
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/searchInput"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="80dp"
@@ -38,17 +33,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Distance RadioGroup -->
-
-    <!-- Car 1: Hyundai HB20 -->
     <RadioGroup
         android:id="@+id/distanceRadioGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="552dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchInput">
 
@@ -61,12 +53,13 @@
 
         <RadioButton
             android:id="@+id/radio20km"
-            android:layout_width="118dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@color/white"
             android:text="20 km" />
     </RadioGroup>
 
+    <!-- Car 1: Hyundai HB20 -->
     <ImageView
         android:id="@+id/carImage"
         android:layout_width="wrap_content"
@@ -199,40 +192,41 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginHorizontal="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/poloRentButton"
+        android:layout_marginBottom="32dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="center_horizontal">
-
-        <!-- Filter button -->
-        <Button
-            android:id="@+id/filterButton"
-            android:layout_width="13dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="16dp"
-            android:backgroundTint="#FF5F00"
-            android:background="@drawable/button_border_filter"
-            android:drawableLeft="@drawable/filter"
-            android:text="Filter"
-            android:textColor="@color/white" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <!-- List button -->
         <Button
             android:id="@+id/listButton"
-            android:layout_width="13dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="16dp"
-
-            android:backgroundTint="#FF5F00"
             android:background="@drawable/button_border_list"
+            android:backgroundTint="#FF5F00"
             android:drawableLeft="@drawable/text_align_center"
+            android:padding="16dp"
             android:text="Listar"
             android:textColor="@color/white" />
+
+        <!-- Filter button -->
+        <Button
+            android:id="@+id/filterButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_border_filter"
+            android:backgroundTint="#FF5F00"
+            android:drawableLeft="@drawable/filter"
+            android:padding="16dp"
+            android:text="Filter"
+            android:textColor="@color/white" />
+
+
     </LinearLayout>
 
     <!-- Filter dialog (Initially hidden) -->
@@ -249,8 +243,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Filter options here"
-            tools:ignore="MissingConstraints" />
+            android:text="Filter options here" />
 
         <Button
             android:id="@+id/closeFilterDialog"
@@ -259,8 +252,7 @@
             android:backgroundTint="#FF5F00"
             android:text="Close"
             android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@id/searchInput"
-            tools:ignore="MissingConstraints,NotSibling" />
+            app:layout_constraintTop_toBottomOf="@id/searchInput" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
